# graphflo

./: .gitignore  build.gradle
dep/backend/: Cargo.toml
dep/backend/src/: environment.rs  error.rs  file_funcs.rs  graphflo.rs  indexer.rs  lib.rs  load.rs  string.rs  try_init.rs
dep/backend/src/action/: add_node.rs  add_node_response.rs  connect_nodes.rs  connect_nodes_response.rs  get_response.rs  mod.rs
dep/backend/src/func/: action_construct.rs  construct.rs  mod.rs
dep/backend/src/func/dispatch/: add_node.rs  connect_nodes.rs  get.rs  mod.rs
dep/backend/src/serialization/: keyed_node_desc.rs  mod.rs  node_connector_desc.rs  node_connector_descs.rs  node_desc.rs  resources.rs
dep/backend/src/state/: graph.rs  mod.rs  node.rs  node_connector.rs
dep/frontend/: package.json
dep/frontend/src/: index.ts  string.ts
dep/frontend/src/action/: add_node.ts  add_node_response.ts  change_add_node_menu_visibility.ts  connect_nodes.ts  connect_nodes_response.ts  finish_dragging_node.ts  get.ts  get_response.ts  index.ts  is_initializing.ts  new_empty_workspace.ts  node_add_menu_input_changed.ts  select_add_node_item.ts  select_node.ts  set_add_node_location.ts  set_node_connector_position.ts  start_dragging_edge.ts  start_dragging_node.ts  stop_dragging_edge.ts
dep/frontend/src/component/: index.ts
dep/frontend/src/main/: index.ts  reducer.ts
dep/frontend/src/reducer/: add_node_item_reducer.ts  add_node_menu_reducer.ts  index.ts  main_reducer.ts  node_connector_reducer.ts  node_connectors_reducer.ts  node_reducer.ts  (+3 more)
res/module/graphflo/: module.json
(+76 files in other folders)
