[dependencies]
lazy_static = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.error-chain]
version = "0.10"
default-features = false

[dependencies.guifast_shared]
path = "..\\..\\..\\guifast\\dep\\guifast_shared\\backend"
version = "0.1"

[dependencies.libflo_action_std]
path = "..\\..\\..\\libflo\\dep\\libflo_action_std"
version = "0.1"

[dependencies.libflo_std]
path = "..\\..\\..\\libflo\\dep\\libflo_std"
version = "0.1"

[lib]
crate-type = ["dylib"]

[package]
authors = ["Tyler Wolf Leonhardt <tyler.wolf.leonhardt@gmail.com>"]
description = "The graphflo plugin for libflo."
exclude = [
    ".gitignore",
    "README",
    "test/**"
]
license = "MIT"
name = "graphflo"
version = "0.1.0"
